<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/compartir"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawableLeft="@drawable/compartir"
                    android:background="@drawable/boton_pregunta" />

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="10dp"
                    android:text="@string/resultado"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/mostrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:gravity="center"
                android:padding="10dp"
                android:text="TextView"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="302dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/introduzcabaremo"
                    android:textColor="#fff" />

                <EditText
                    android:id="@+id/baremo"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="number"
                    android:textColor="#fff" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/pulsabar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_toEndOf="@+id/calcular"
                    android:layout_toRightOf="@+id/calcular"
                    android:background="#fff"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/notabar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:text="TextView"
                        android:textColor="#000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="18dp"
                    android:layout_marginStart="18dp"
                    android:layout_toLeftOf="@+id/calcular"
                    android:layout_toStartOf="@+id/calcular"
                    android:background="#fff"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/nota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:text="TextView"
                        android:textColor="#000" />

                </LinearLayout>

                <Button
                    android:id="@+id/calcular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/boton_menu"
                    android:text="Button"
                    tools:text="@string/calcular" />
            </RelativeLayout>

            <Button
                android:id="@+id/introbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:layout_weight="1"
                android:background="@drawable/boton_menu"
                android:text="@string/comosaberbaremo" />

            <Button
                android:id="@+id/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_weight="1"
                android:background="@drawable/boton_menu"
                android:text="@string/guardaevolucion" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>